@@ -1,6 +1,9 @@
 v3.5.1 (XXXX-XX-XX)
 -------------------
 
+* Decreased unnecessary wait times for agency callbacks in case they were
+  called earlier than expected by main thread.
+
 * Make arangosh not close the connection after the user aborts an operation.
   This restores the same behavior as in previous versions of ArangoDB, which also
   left the connection open.
